--- a/application/modules/Admin/views/user/login.html
+++ b/application/modules/Admin/views/user/login.html
@@ -1,127 +1,126 @@
 <?php use Helper\Html;?>
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="utf-8">
-        <title><?php echo $title?:null?></title>
-        <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-        <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-        <?=Html::css('/components/bootstrap/3.3.5/css/bootstrap.min.css')?>
-        <!-- MetisMenu CSS -->
-        <?=Html::css('/components/metisMenu/metisMenu.min.css')?>
-        <!-- Custom CSS -->
-        <?=Html::css('/css/sb-admin-2.css')?>
-        <?=Html::css('/components/font-awesome/css/font-awesome.min.css')?>
-        <!-- jQuery -->
-        <?=Html::javascript('/components/jquery/jquery-2.1.4.min.js')?>
-    </head>
-    <body>
-        <div class="container">
-            <div class="row">
-                <div class="col-md-4 col-md-offset-4">
-                    <div class="login-panel panel panel-default">
-                        <div class="panel-heading">
-                            <h3 class="panel-title">登录</h3>
-                        </div>
-                        <div class="panel-body">
-                            <form id="from" role="form">
-                                <fieldset>
-                                    <div class="form-group">
-                                        <input class="form-control" placeholder="用户名" id="username" name="username" type="text" autofocus value="">
-                                    </div>
-                                    <div class="form-group">
-                                        <input class="form-control" placeholder="密码" id="password" name="password" type="password" value="">
-                                    </div>
-                                    <!--<div class="checkbox">
-                                        <label>
-                                            <input name="remember" type="checkbox" value="Remember Me">Remember Me
-                                        </label>
-                                    </div>-->
-                                    <!-- Change this to a button or input when using this as a form -->
-                                    <div class="form-group">
-                                        <div id="captcha" style="margin-left: 1.2em;"></div>
-                                    </div>
-                                    <div class="form-group">
-                                        <div class="text-danger" id="error_msg"></div>
-                                    </div>
-                                    <button id="submit" class="btn btn-lg btn-success btn-block" data-loading-text="正在登录...">登 录</button>
-                                </fieldset>
-                            </form>
-                        </div>
-                    </div>
+<head>
+    <meta charset="utf-8">
+    <title><?php echo $title?:null?></title>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+    <link href="/components/font-awesome/css/font-awesome.min.css" rel="stylesheet">
+    <link href="/components/bootstrap/3.3.5/css/bootstrap.min.css" rel="stylesheet">
+    <link href="/css/sb-admin-2.css" rel="stylesheet">
+    <script src="/components/require.js"></script>
+    <script src="/js/config.js"></script>
+</head>
+<body>
+<div class="container">
+    <div class="row">
+        <div class="col-md-4 col-md-offset-4">
+            <div class="login-panel panel panel-default">
+                <div class="panel-heading">
+                    <h3 class="panel-title">登录</h3>
+                </div>
+                <div class="panel-body">
+                    <form id="from" role="form">
+                        <fieldset>
+                            <div class="form-group">
+                                <input class="form-control" placeholder="用户名" id="username" name="username" type="text"
+                                       autofocus value="">
+                            </div>
+                            <div class="form-group">
+                                <input class="form-control" placeholder="密码" id="password" name="password"
+                                       type="password" value="">
+                            </div>
+                            <!--<div class="checkbox">
+                                <label>
+                                    <input name="remember" type="checkbox" value="Remember Me">Remember Me
+                                </label>
+                            </div>-->
+                            <!-- Change this to a button or input when using this as a form -->
+                            <div class="form-group">
+                                <div id="captcha" style="margin-left: 1.2em;"></div>
+                            </div>
+                            <div class="form-group">
+                                <div class="text-danger" id="error_msg"></div>
+                            </div>
+                            <button id="submit" class="btn btn-lg btn-success btn-block" data-loading-text="正在登录...">登
+                                录
+                            </button>
+                        </fieldset>
+                    </form>
                 </div>
             </div>
         </div>
-        <!-- Bootstrap Core JavaScript -->
-        <?=Html::javascript('/components/bootstrap/3.3.5/js/bootstrap.min.js')?>
-        <!-- Metis Menu Plugin JavaScript -->
-        <?=Html::javascript('/components/metisMenu/metisMenu.min.js')?>
-        <!-- Custom Theme JavaScript -->
-        <?=Html::javascript('/js/sb-admin-2.js')?>
+    </div>
+</div>
+<!-- Bootstrap Core JavaScript -->
+<!--<?=Html::javascript('/components/bootstrap/3.3.5/js/bootstrap.min.js')?>-->
+<!-- Custom Theme JavaScript -->
+<?=Html::javascript('/js/sb-admin-2.js')?>
 
-        <script type="text/javascript">
-            $(function () {
+<script src="//static.geetest.com/static/tools/gt.js"></script>
+<script type="text/javascript">
+    require(["jquery"], function ($) {
+        $.get("/captcha/start?rand=" + Math.round(Math.random() * 100), function (data) {
+            // 使用initGeetest接口
+            // 参数1：配置参数，与创建Geetest实例时接受的参数一致
+            // 参数2：回调，回调的第一个参数验证码对象，之后可以使用它做appendTo之类的事件
+            initGeetest({
+                gt: data.gt,
+                challenge: data.challenge,
+                product: "float", // 产品形式
+                offline: !data.success
+            }, function (captchaObj) {
+                // 将验证码加到id为captcha的元素里
+                captchaObj.appendTo("#captcha");
+            });
+        }, 'json');
 
-                function showError(error){
-                    $('#error_msg').html(error);
-                }
+        $(function () {
 
-                function hideError(){
-                    $('#error_msg').empty();
-                }
+            function showError(error) {
+                $('#error_msg').html(error);
+            }
 
-                $('#from').submit(function(){
-                    var $username = $('#username'),
+            function hideError() {
+                $('#error_msg').empty();
+            }
+
+            $('#from').submit(function () {
+                var $username = $('#username'),
                         $password = $('#password');
 
-                    if($username.val() === ''){
-                        showError('请填写用户名');
-                        $username.focus();
-                        return false;
-                    }
-
-                    if($password.val() === ''){
-                        showError('请填写密码');
-                        $password.focus();
-                        return false;
-                    }
-
-                    var loading = setTimeout(function(){
-                        $('#submit').button('loading');
-                    }, 500) ;
-                    $.post('', $(this).serializeArray(), function(result){
-                        clearTimeout(loading);
-                        $('#submit').button('reset');
-                        if(result.code !== 0) {
-                            showError('['+ result.code +'] ' + result.message);
-                            return false;
-                        }
-
-                        window.location.href = '/admin/index';
-                        return false;
-                    }, 'json');
+                if ($username.val() === '') {
+                    showError('请填写用户名');
+                    $username.focus();
                     return false;
-                });
-            });
-        </script>
+                }
 
-        <script src="//static.geetest.com/static/tools/gt.js"></script>
-        <script type="text/javascript">
-            $.get("/captcha/start?rand="+Math.round(Math.random()*100), function(data){
-                // 使用initGeetest接口
-                // 参数1：配置参数，与创建Geetest实例时接受的参数一致
-                // 参数2：回调，回调的第一个参数验证码对象，之后可以使用它做appendTo之类的事件
-                initGeetest({
-                    gt: data.gt,
-                    challenge: data.challenge,
-                    product: "float", // 产品形式
-                    offline: !data.success
-                }, function(captchaObj){
-                    // 将验证码加到id为captcha的元素里
-                    captchaObj.appendTo("#captcha");
-                });
-            }, 'json');
-        </script>
-    </body>
+                if ($password.val() === '') {
+                    showError('请填写密码');
+                    $password.focus();
+                    return false;
+                }
+
+                var loading = setTimeout(function () {
+                    $('#submit').button('loading');
+                }, 500);
+                $.post('', $(this).serializeArray(), function (result) {
+                    clearTimeout(loading);
+                    $('#submit').button('reset');
+                    if (result.code !== 0) {
+                        showError('[' + result.code + '] ' + result.message);
+                        return false;
+                    }
+
+                    window.location.href = '/admin/index';
+                    return false;
+                }, 'json');
+                return false;
+            });
+        });
+    });
+</script>
+</body>
 </html>
