--- a/application/modules/Admin/views/resource/addResource.html
+++ b/application/modules/Admin/views/resource/addResource.html
@@ -49,10 +49,13 @@
                            placeholder="fa fa-home"/>
                 </div>
             </div>
-            <div class="form-group">
+            <div class="form-group required">
                 <label class="control-label col-sm-3">URI</label>
                 <div class="col-sm-8">
-                    <input type="text" name="resource_uri" class="form-control input-sm" placeholder="/admin/resource">
+                    <input type="text" name="resource_uri" class="form-control input-sm"
+                           placeholder="/admin/resource"
+
+                           data-bv-notempty="true">
                 </div>
             </div>
             <div class="form-group">
