--- a/application/modules/Admin/views/resource/editResource.html
+++ b/application/modules/Admin/views/resource/editResource.html
@@ -50,11 +50,14 @@
                            placeholder="fa fa-home"/>
                 </div>
             </div>
-            <div class="form-group">
+            <div class="form-group required">
                 <label class="control-label col-sm-3">URI</label>
                 <div class="col-sm-8">
-                    <input type="text" name="resource_uri" class="form-control input-sm" placeholder="/admin/resource"
-                           v-model="resourceInfo.resource_uri">
+                    <input type="text" name="resource_uri" class="form-control input-sm"
+                           placeholder="/admin/resource"
+                           v-model="resourceInfo.resource_uri"
+
+                           data-bv-notempty="true">
                 </div>
             </div>
             <div class="form-group">
@@ -111,7 +114,6 @@
                     typeList: eval('(<?=json_encode(ResourceModel::TYPE_LIST)?>)')
                 }
             });
-
 
             $("#resource_form").bootstrapValidator().on('success.form.bv', function (e) {
                 // Prevent form submission
