--- a/application/modules/Admin/views/index/index.html
+++ b/application/modules/Admin/views/index/index.html
@@ -1,7 +1,7 @@
 <?php use Helper\Html;?>
 <div class="row">
     <div class="col-lg-12">
-        <div class="container" style="text-align:center;">
+        <div style="text-align:center;">
             <h1>This Home Page.</h1>
         </div>
     </div>
