--- a/application/modules/Admin/views/layouts/admin.html
+++ b/application/modules/Admin/views/layouts/admin.html
@@ -12,15 +12,16 @@
     <link href="/css/style.css" rel="stylesheet">
     <link href="/css/admin/layout.css" rel="stylesheet">
     <script src="/components/require.js"></script>
+    <script src="/components/jquery/jquery-3.1.0.min.js"></script>
     <script src="/js/config.js"></script>
     <script src="/js/common.js"></script>
     <script src="/js/sb-admin-2.js"></script>
 </head>
-<body>
+<body class="hidden">
 <div id="wrapper">
 
     <!-- Navigation -->
-    <nav class="navbar navbar-default navbar-static-top" role="navigation" style="margin-bottom: 0">
+    <nav id="navbar" class="navbar navbar-default navbar-static-top" role="navigation" style="margin-bottom: 0">
         <div class="navbar-header">
             <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
                 <span class="sr-only">Toggle navigation</span>
@@ -30,6 +31,8 @@
             </button>
             <a class="navbar-brand" href="/admin/index">管理后台</a>
         </div>
+        <a class="navbar-brand" href="javascript:;" @click="menuSwitch"><i
+                class="fa {{miniMenu ? 'fa-indent' : 'fa-dedent'}}"></i></a>
         <!-- /.navbar-header -->
 
         <ul class="nav navbar-top-links navbar-right">
@@ -57,30 +60,65 @@
 
         <!-- menu -->
         <div class="navbar-default sidebar" role="navigation">
-            <div class="sidebar-nav navbar-collapse">
-                <ul class="nav" id="side-menu">
-                    <?if(is_array($menu_list)):?>
-                    <?foreach($menu_list as $menu1):?>
-                    <li>
-                        <a href="<?=Html::encode($menu1['resource_uri'])?>"><?if($menu1['menu_icon_class'] !== ''):?><i
-                                class="<?=Html::encode($menu1['menu_icon_class'])?> fa-fw"></i><?endif?> <?=Html::encode($menu1['resource_name'])?><?if(isset($menu1['menu_list'])):?>
-                            <span class="fa arrow"></span><?endif?></a>
-                        <?if(isset($menu1['menu_list'])):?>
-                        <ul class="nav nav-second-level">
-                            <?foreach($menu1['menu_list'] as $menu2):?>
-                            <li>
-                                <a href="<?=Html::encode($menu2['resource_uri'])?>"><?if($menu2['menu_icon_class'] !== ''):?>
-                                    <i class="<?=Html::encode($menu2['menu_icon_class'])?> fa-fw"></i><?endif?> <?=Html::encode($menu2['resource_name'])?>
-                                </a>
-                            </li>
-                            <?endforeach?>
-                        </ul>
-                        <?endif?>
-                    </li>
-                    <?endforeach?>
-                    <?endif?>
+            <div class="sidebar-nav navbar-collapse" :class="{'nav-mini':miniMenu}">
+                <ul id="side-menu" class="nav metismenu" v-cloak>
+                    <template v-for="item in menuList">
+                        <li>
+                            <a href="{{item.resource_uri}}">
+                                <i v-if="item.menu_icon_class !== ''" class="{{item.menu_icon_class}} fa-fw"></i>
+                                <span class="title">
+                                    {{item.resource_name}}
+                                </span>
+                                <span v-if="item.menu_list && !miniMenu" class="fa arrow"></span>
+                            </a>
+                            <ul v-if="item.menu_list" class="nav nav-second-level collapse">
+                                <template v-for="item2 in item.menu_list">
+                                    <li>
+                                        <a href="{{item2.resource_uri}}" @click="">
+                                            <i v-if="item2.menu_icon_class" class="{{item2.menu_icon_class}} fa-fw"></i>
+                                            {{item2.resource_name}}
+                                        </a>
+                                    </li>
+                                </template>
+                            </ul>
+                        </li>
+                    </template>
+                    <!--<pre style="width: 500px;">{{$data|json}}</pre>-->
                 </ul>
             </div>
+            <script>
+                require(['jquery', 'vue', 'cookie', 'metisMenu', 'bootstrap'], function ($, Vue, Cookie) {
+                    new Vue({
+                        el: "#navbar",
+                        data: {
+                            miniMenu: parseInt(Cookie.get("mini-menu")),
+                            menuList: $.parseJSON('<?=json_encode($menu_list)?>')
+                        },
+                        methods: {
+                            menuSwitch: function () {
+                                this.$data.miniMenu = this.$data.miniMenu ? 0 : 1;
+                                Cookie.set("mini-menu", this.$data.miniMenu);
+                                $('body').toggleClass("mini-menu");
+                            }
+                        },
+                        ready: function () {
+                            $('#side-menu').metisMenu();
+                            var url = window.location.href;
+                            var element = $('ul.nav a').filter(function () {
+                                return this.href === url || url.indexOf(this.href) === 0;
+                            }).addClass('active').closest('.nav').addClass('in').parent();
+                            if (element.is('li')) {
+                                element.addClass('active');
+                            }
+
+                            if (this.$data.miniMenu) {
+                                $('body').addClass("mini-menu");
+                            }
+                            $("body").removeClass("hidden");
+                        }
+                    });
+                });
+            </script>
             <!-- /.sidebar-collapse -->
         </div>
         <!-- /.navbar-static-side -->
