--- a/application/modules/Admin/views/user/login.html
+++ b/application/modules/Admin/views/user/login.html
@@ -54,14 +54,10 @@
         </div>
     </div>
 </div>
-<!-- Bootstrap Core JavaScript -->
-<!--<?=Html::javascript('/components/bootstrap/3.3.5/js/bootstrap.min.js')?>-->
-<!-- Custom Theme JavaScript -->
-<?=Html::javascript('/js/sb-admin-2.js')?>
 
 <script src="//static.geetest.com/static/tools/gt.js"></script>
 <script type="text/javascript">
-    require(["jquery"], function ($) {
+    require(["jquery", "bootstrap"], function ($) {
         $.get("/captcha/start?rand=" + Math.round(Math.random() * 100), function (data) {
             // 使用initGeetest接口
             // 参数1：配置参数，与创建Geetest实例时接受的参数一致
