--- a/application/modules/Admin/views/resource/manage.html
+++ b/application/modules/Admin/views/resource/manage.html
@@ -3,7 +3,7 @@
     <div class="col-lg-12">
         <div class="well well-sm search_box">
             <a class="btn btn-sm btn-primary pull-right" @click="addResource">新增资源</a>
-            <form id="search" class="form-inline" role="form">
+            <form id="search" class="form-inline" role="form" action="/admin/resource/getPageData" pg-form data-pg-table="#list_table">
                 <div class="form-group">
                     <label class="control-label" for="resource_name">资源名称</label>
                     <input type="text" id="resource_name" name="resource_name" class="form-control input-sm"
@@ -25,18 +25,18 @@
             </form>
         </div>
         <div class="table-responsive">
-            <table id="list_table" class="table table-striped table-bordered table-hover dataTable">
+            <table id="list_table" class="table table-striped table-bordered table-hover" pg-table data-pg-size="4" data-pg-form="#search">
                 <thead>
                 <tr>
-                    <th class="sorting" data-field="resource_id">资源ID</th>
+                    <th class="sort" data-field="resource_id">资源ID</th>
                     <th>资源名称</th>
-                    <th class="sorting" data-field="resource_type">资源类型</th>
+                    <th class="sort" data-field="resource_type">资源类型</th>
                     <th>URI</th>
                     <th>KEY</th>
                     <th>是否启用</th>
                     <th>需要登录</th>
                     <th>开放资源</th>
-                    <th class="sorting" data-field="menu_sort">排序</th>
+                    <th class="sort" data-field="menu_sort">排序</th>
                     <th>创建时间</th>
                     <th>操作</th>
                 </tr>
@@ -62,7 +62,7 @@
                     </tr>
                 </template>
                 <tr v-show="pageList.total == 0">
-                    <td class="dataTable_empty">暂无数据</td>
+                    <td class="table-empty">暂无数据</td>
                 </tr>
                 </tbody>
             </table>
@@ -111,36 +111,10 @@
             });
 
             // 初始化页面数据
-            $("#list_table").on('initTableData', function () {
-                var $table = $(this);
-                var $pagination = $table.next(".m-pagination");
-                var currentPageIndex = 0;
-                if ($pagination.data('pagination')) {
-                    currentPageIndex = $pagination.data('pagination').currentPageIndex;
-                    $pagination.pagination('destroy');
-                }
-
-                var params = $("#search").serializeArray();
-                params.push({name: "sort", value: $table.data("sort")});
-                $pagination.pagination({
-//            pageSize: '<?=PAGE_SIZE?>',
-                    pageSize: '4',
-                    pageIndex: currentPageIndex,
-                    remote: {
-                        url: '/admin/resource/getPageData',
-                        params: params,
-                        success: function (result, pageIndex) {
-                            resourceManage.pageList = result;
-                        }
-                    }
-                });
+            $("#list_table").on('pg-loaded', function () {
+                resourceManage.pageList = $(this).data("pgData");
             });
-            $("#list_table").trigger('initTableData');
-
-            $("#search").submit(function () {
-                $("#list_table").trigger('initTableData');
-                return false;
-            });
+            $("#list_table").trigger('pg-init');
         });
     });
 </script>
