--- a/application/modules/Admin/views/role/manage.html
+++ b/application/modules/Admin/views/role/manage.html
@@ -3,7 +3,7 @@
     <div class="col-lg-12">
         <div class="well well-sm search_box">
             <a class="btn btn-sm btn-primary pull-right" @click="addRole">新增角色</a>
-            <form id="search" class="form-inline" role="form">
+            <form id="search" class="form-inline" role="form" action="/admin/role/getPageData" pg-form data-pg-table="#list_table">
                 <div class="form-group">
                     <label class="control-label" for="role_name">角色名称</label>
                     <input type="text" id="role_name" name="role_name" class="form-control input-sm" placeholder="角色名称">
@@ -24,10 +24,11 @@
             </form>
         </div>
         <div class="table-responsive">
-            <table id="list_table" class="table table-striped table-bordered table-hover dataTable">
+            <table id="list_table" class="table table-striped table-bordered table-hover" pg-table
+                   data-pg-size="<?=PAGE_SIZE?>" data-pg-form="#search">
                 <thead>
                 <tr>
-                    <th class="sorting" data-field="role_id">角色ID</th>
+                    <th class="sort" data-field="role_id">角色ID</th>
                     <th>角色名称</th>
                     <th>角色Key</th>
                     <th>是否启用</th>
@@ -57,7 +58,7 @@
                     </tr>
                 </template>
                 <tr v-show="pageList.total == 0">
-                    <td class="dataTable_empty">暂无数据</td>
+                    <td class="table-empty">暂无数据</td>
                 </tr>
                 </tbody>
             </table>
@@ -118,35 +119,10 @@
             });
 
             // 初始化页面数据
-            $("#list_table").on('initTableData', function () {
-                var $table = $(this);
-                var $pagination = $table.next(".m-pagination");
-                var currentPageIndex = 0;
-                if ($pagination.data('pagination')) {
-                    currentPageIndex = $pagination.data('pagination').currentPageIndex;
-                    $pagination.pagination('destroy');
-                }
-
-                var params = $("#search").serializeArray();
-                params.push({name: "sort", value: $table.data("sort")});
-                $pagination.pagination({
-                    pageSize: '<?=PAGE_SIZE?>',
-                    pageIndex: currentPageIndex,
-                    remote: {
-                        url: '/admin/role/getPageData',
-                        params: params,
-                        success: function (result, pageIndex) {
-                            roleManage.pageList = result;
-                        }
-                    }
-                });
+            $("#list_table").on('pg-loaded', function () {
+                roleManage.pageList = $(this).data("pgData");
             });
-            $("#list_table").trigger('initTableData');
-
-            $("#search").submit(function () {
-                $("#list_table").trigger('initTableData');
-                return false;
-            });
+            $("#list_table").trigger('pg-init');
         });
     });
 </script>
