--- a/application/modules/Admin/views/user/editUser.html
+++ b/application/modules/Admin/views/user/editUser.html
@@ -93,7 +93,7 @@
                         return;
                     }
                     BootstrapDialog.closestDialog($form).close();
-                    $("#list_table").trigger('initTableData');
+                    $("#list_table").trigger('pg-init');
                     toastr.success(result.message);
                 }, 'json');
                 return false;
