--- a/application/modules/Admin/views/user/manage.html
+++ b/application/modules/Admin/views/user/manage.html
@@ -3,7 +3,8 @@
     <div class="col-lg-12">
         <div class="well well-sm search_box">
             <a class="btn btn-sm btn-primary pull-right" @click="addUser">新增用户</a>
-            <form id="search" class="form-inline" role="form">
+            <form id="search" class="form-inline" role="form" action="/admin/user/getPageData"
+                  pg-form data-pg-table="#list_table">
                 <div class="form-group">
                     <label class="control-label" for="username">用户名</label>
                     <input type="text" id="username" name="username" class="form-control input-sm" placeholder="用户名">
@@ -39,10 +40,12 @@
             </form>
         </div>
         <div class="table-responsive">
-            <table id="list_table" class="table table-striped table-bordered table-hover dataTable">
+            <table id="list_table" class="table table-striped table-bordered table-hover"
+                   pg-table
+                   data-pg-size="<?=PAGE_SIZE?>" data-pg-form="#search">
                 <thead>
                 <tr>
-                    <th class="sorting" data-field="resource_id">用户ID</th>
+                    <th class="sort" data-field="user_id">用户ID</th>
                     <th>用户名</th>
                     <th>角色</th>
                     <th>昵称</th>
@@ -76,7 +79,7 @@
                     </tr>
                 </template>
                 <tr v-show="pageList.total == 0">
-                    <td class="dataTable_empty">暂无数据</td>
+                    <td class="table-empty">暂无数据</td>
                 </tr>
                 </tbody>
             </table>
@@ -125,35 +128,10 @@
             });
 
             // 初始化页面数据
-            $("#list_table").on('initTableData', function () {
-                var $table = $(this);
-                var $pagination = $table.next(".m-pagination");
-                var currentPageIndex = 0;
-                if ($pagination.data('pagination')) {
-                    currentPageIndex = $pagination.data('pagination').currentPageIndex;
-                    $pagination.pagination('destroy');
-                }
-
-                var params = $("#search").serializeArray();
-                params.push({name: "sort", value: $table.data("sort")});
-                $pagination.pagination({
-                    pageSize: '<?=PAGE_SIZE?>',
-                    pageIndex: currentPageIndex,
-                    remote: {
-                        url: '/admin/user/getPageData',
-                        params: params,
-                        success: function (result, pageIndex) {
-                            resourceManage.pageList = result;
-                        }
-                    }
-                });
+            $("#list_table").on('pg-loaded', function () {
+                resourceManage.pageList = $(this).data("pgData");
             });
-            $("#list_table").trigger('initTableData');
-
-            $("#search").submit(function () {
-                $("#list_table").trigger('initTableData');
-                return false;
-            });
+            $("#list_table").trigger('pg-init');
         });
     });
 </script>
