--- a/public/components/metisMenu/mini.css
+++ b/public/components/metisMenu/mini.css
@@ -9,7 +9,7 @@
     top: 0;
     left: 0;
     bottom: 0;
-    border-right: 1px solid #b5b5b5;
+    /*border-right: 1px solid #b5b5b5;*/
 }
 
 .nav-mini {
@@ -20,7 +20,7 @@
     padding: 0;
     margin: 0;
     list-style: none;
-    background: #fbfbfb;
+    background: #f8f8f8;
 }
 
 .nav-mini li {
@@ -44,7 +44,7 @@
 .nav-mini .metismenu .collapse, .nav-mini .metismenu .collapsing {
     position: absolute;
     top: 0;
-    left: 100%;
+    left: 102%;
     min-width: 160px;
 }
 
