--- a/public/css/sb-admin-2.css
+++ b/public/css/sb-admin-2.css
@@ -224,42 +224,31 @@ body {
     height: 100%;
 }
 
-.dataTables_wrapper {
-    position: relative;
-    clear: both;
-}
-
-table.dataTable thead .sorting,
-table.dataTable thead .sorting_asc,
-table.dataTable thead .sorting_desc,
-table.dataTable thead .sorting_asc_disabled,
-table.dataTable thead .sorting_desc_disabled {
+table thead .sort,
+table thead .sort-asc,
+table thead .sort-desc {
     background: 0 0;
     cursor: pointer;
 }
 
-table.dataTable thead .sorting_asc:after {
-    content: "\f0de";
-    float: right;
-    font-family: fontawesome;
-}
-
-table.dataTable thead .sorting_desc:after {
-    content: "\f0dd";
-    float: right;
-    font-family: fontawesome;
-}
-
-table.dataTable thead .sorting:after {
+table thead .sort:after {
     content: "\f0dc";
     float: right;
     font-family: fontawesome;
     color: rgba(50,50,50,.5);
 }
-table.dataTable thead > tr > th {
-     padding-left: 18px;
-     padding-right: 18px;
- }
+
+table thead .sort-asc:after {
+    content: "\f0de";
+    float: right;
+    font-family: fontawesome;
+}
+
+table thead .sort-desc:after {
+    content: "\f0dd";
+    float: right;
+    font-family: fontawesome;
+}
 
 .btn-circle {
     width: 30px;
